Modificacion de la clase correlator y añadida clases tester